Fixing the color of the links and the border and spacing for the "participating journals" area on the homepage
git-svn-id: https://svn.syslab.com/svn/syslabcom/recensio.theme/trunk@7431 51ee9ba4-e84d-4896-84de-354f1821c169

--- a/recensio/theme/browser/stylesheets/main.css
+++ b/recensio/theme/browser/stylesheets/main.css
@@ -192,6 +192,19 @@ div.box ul a.review-title {
    padding:0;
 }
 
+#participating-journals {
+   border-top:1px solid #CCCCCC;
+   padding-top:20px;
+}
+
+#participating-journals a {
+   color: #999999;
+}
+
+#participating-journals a:hover {
+   color:#916145;
+}
+
 .box ul li,
 ul.easyticker ul li {
    padding: 0 0 0.5em 40px;
